[project]
name = "map-network-viz"
version = "0.0.3"
authors = [
  { name="Sejal Dua", email="sejaldua@gmail.com" },
]
description = "A small wrapper for visualizing street networks and making artistic maps with OpenStreetMap and Networkx."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/sejaldua/map-network-viz"
Issues = "https://github.com/sejaldua/map-network-viz/issues"

[build-system]
requires = ["setuptools>=61.0", "geopandas", "geopy", "matplotlib", "osmnx>=1.8.0"]
build-backend = "setuptools.build_meta"